turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:7: error: reassignment to val
	c=0
         ^Turmite:12: error: reassignment to val
			state=NextState(state, c, rule);
                             ^Turmite:13: error: reassignment to val
			c=colors.length
                         ^Turmite:15: error: reassignment to val
		c=c+1
                 ^